
Release Notes:

iri-0.3:  First released version

This version is released to provide a stable
version of the source for Jena 2.5.
It is not intended for use as a general purpose library.
In particular, many of the methods are unimplemented;
the documentation is inadequate.
Partial support may be available on 
jena-dev@yahoogroups.com.

iri-0.2:  Version in Jena 2.4